fix: Select - trigger arrow spacing

--- a/src/components/Select/Select.styl
+++ b/src/components/Select/Select.styl
@@ -25,7 +25,7 @@ $levelGap = 24px
 
 .triggerArrow
   margin-left .3em
-  margin-right -.1em
+  margin-right -.3em
   transition transform .2s ease-out
   flex-shrink 0
 
